--- a/index.html
+++ b/index.html
@@ -401,14 +401,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-15" class="item" data-id="id-15" data-tag="website" data-type="web"><a href="#"><img src="images/Community_Well.png" width="281px" height="191px" /><center><p>Community Well</p></center></a></li>
                 </ul>
-                <!--<p>Hipster Unite</p>-->    
+                <!--<p>Community Well</p>-->    
               </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Holder</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
                 </ul>
-                <!--<p>Hipster Unite</p>-->    
+                <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
 <div class="span4">
@@ -428,14 +428,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Hold</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Hold</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
@@ -456,14 +456,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Hold</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p>Hold</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->          
