--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
@@ -428,14 +428,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
@@ -456,14 +456,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><p> </p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->          
@@ -562,12 +562,31 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 <section id="writings">								
 								<center><h2>Written Pieces</h2></center>
 								<center><div class="spacer"></div></center>
-								<center><p>General Areas: Waste, Bicycling, Citizen Participation, & XYZ</p></center>
+								<center><p>General Areas: Cycling Infrastructure and Safety, Waste Management, Citizen Participation, & Other Urban Planning Topics</p></center>
 								<!--<img src="images/written.jpg" alt="" />-->
-								<article>
+								
+                <article>
+                  <h3>Advanced Dasymetric Mapping Model: A Case Study for Park Access 2016</h3>
+                  <p>An improved method of population distribution that allows geographers to increase the accuracy of population estimates for custom geographic areas, like neighborhoods, city council districts, or service areas.  <a href="https://www.academia.edu/27614103/Advanced_Dasymetric_Mapping_Model_A_Case_Study_for_Park_Access">Read Full Report</a></p>
+                </article>
+
+                <article>
+                  <h3>Eliminating Bicycle Collisions: Vision Zero in the City of San Francisco 2016</h3>
+                  <p>An examination of the City of San Francsico goal of eliminating traffic fatalities from a cycling perspective <a href="https://www.academia.edu/28269420/Eliminating_Bicycle_Collisions_Vision_Zero_in_the_City_of_San_Francisco">Read Full Report</a></p>
+                </article>
+
+                <article>
 									<h3>City and County of San Francisco: Profile of the Existing Bicycle Infrastructure in District 11 and the Excelsior Neighborhood 2015</h3>
 									<p>A demonstration of the inequitable distribution of cycling infrastructure in the the City of San Francisco <a href="https://www.academia.edu/s/499a82851e?source=work">Read Full Report</a></p>
 								</article>
+                <article>
+                  <h3>Saving Business Districts:  A Formalized Parcel Savings Account  2016</h3>
+                  <p>A systematic way for cities to address vacant business store front before they become problems. <a href="https://www.academia.edu/28251435/Saving_Business_Districts">Read Full Report</a></p>
+                </article>
+                <article>
+                  <h3>The Election of Libby Schaaf and What the Most Recent Mayoral Elections Demonstrate About Elections in the United States of America 2016</h3>
+                  <p>A discussion of what elections really say about the voting public and inexpensive policies that could be adopted to increase voter turnout. <a href="https://www.academia.edu/27692954/The_Election_of_Libby_Schaaf_and_What_the_Most_Recent_Mayoral_Elections_Demonstrate_About_Elections_in_the_United_States_of_America">Read Full Report</a></p>
+                </article>
 								<article>
 									<h3>Electronic Benefits Transfer Service Charges in Alameda County California: A Geographic Analysis of the Inequitable Service Charges 2015</h3>
 									<p>An examination of the ATM fees on EBT clients in Alameda County and the City of Oakland. We were able to develop a enhanced mapping tool that serves this population <a href="https://www.academia.edu/19591994/Electronic_Benefits_Transfer_Service_Charges_in_Alameda_County_California_A_Geographic_Analysis_of_the_Inequitable_Service_Charges">Read Full Report</a></p>
@@ -576,6 +595,12 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 									<h3>Oakland Sustainable Neighborhood Initiative Interactive Map: Moving Beyond Paper Maps 2015</h3>
 									<p>Designing map tools to enhance public user understanding of data in the planning and decision-making processes <a href="https://www.academia.edu/688425/The_Built_Environment_and_Schools">Read Full Report</a></p>
 								</article>
+
+                <article>
+                  <h3>City Council District Land Use Trends: A Case Study in the City of Oakland, California 2015</h3>
+                  <p>An examination of the decision making process and how land use in city council districts should be more a more significant variable in how a representaive prioritizes policy measures <a href="https://www.academia.edu/27690686/City_Council_District_Land_Use_Trends_A_Case_Study_in_the_City_of_Oakland_California">Read Full Report</a></p>
+                </article>
+
 								<article>
 									<h3>Zero Waste at the University of California Los Angeles 2011</h3>
 									<p>An analysis of Zero Waste policies and how UCLA can be the global leader in waste management of campuses of high learning <a href="https://www.academia.edu/688426/Zero_Waste_at_UCLA">Read Full Report</a></p>
@@ -1004,7 +1029,7 @@ frameborder="0" scrolling="no"></iframe></div>
 <div class="push"></div>
         </div>
         <div class="footer">
-            <center><p>Contact:  Phone 415.574.4567 | Email: naulston5 at gmail.com 
+            <center><p>Contact:  Phone 415.715.9601 | Email: naulston5 at gmail.com 
 
  	<a href="https://www.linkedin.com/in/nic-aulston-a6618160"><img src="images/llinkedin.png" alt="" style="width:35px;height:35px;border:0;">
  	<a href="mailto:naulston5@gmail.com"><img src="images/email.png" alt="" style="width:35px;height:35px;border:0;">
