--- a/index.html
+++ b/index.html
@@ -406,14 +406,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-14" class="item" data-id="id-14" data-tag="website" data-type="map"><a href="#"><img src="images/Oakland_Voting.png" width="281px" height="191px" /><center><p>Oakland Voting</p></center></a></li>
+                  <li data-panel="panel-14" class="item" data-id="id-14" data-tag="website" data-type="map"><img src="images/Oakland_Voting.png" width="281px" height="191px" /><center><p>Oakland Voting</p></center></a></li>
                 </ul>
                 <!--<p>Oakland Voting</p>-->    
               </div><!-- /span4 -->
@@ -428,14 +428,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
@@ -456,14 +456,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
               <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><a href="#"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->          
@@ -671,7 +671,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 										<div class="bar" style="width: 70%;">Web Design 70%</div>
 										</div>  
 										<div class="progress">
-										<div class="bar" style="width: 58%;">HTML/CSS 58%</div>
+										<div class="bar" style="width: 75%;">HTML/CSS 75%</div>
 										</div> 
 										<div class="progress">
 										<div class="bar" style="width: 70%;">Group Facilitation 72%</div>
@@ -688,7 +688,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 							Statistics: SPSS, STATA, R, Excel, D3, SQL
 							Mapping: ArcGIS, QGIS, Google Earth, Google Maps, Leaflet, CartoDB, Mapbox, OpenStreetMap
               Group facilitation:
-              Data Vizualization
+              Data Vizualization (both paper and interactive): Maps, Charts, Graphs, and infographics
 						</p><br>
             <hr>
 
@@ -782,7 +782,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 							<!--<img src="images/OaklandRingMap.png" />-->
 							<!--<br />-->
 <div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/PublicInformation/index.html?appid=bfdbd96a560f4aa581966f3af2c42bd4&amp;extent=-122.6215,37.4344,-121.5311,38.1085" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
-							<h4>Project Overview</h4>
+							<h4>Project Overview / <a href="ttp://www.arcgis.com/apps/PublicInformation/index.html?appid=bfdbd96a560f4aa581966f3af2c42bd4&amp;extent=-122.6215,37.4344,-121.5311,38.1085">See Full Map</a></h4>
 							<p>Oakland Ring Map of Social Services</p>
 							<h4>Project Details</h4>
 							<p>This project was designed with the explicit purpose of developing a method to show the different concentrations of the social service clients in the City of Oakland. The ability to display a number of variables into one comprehensive map has troubled geographic scientists for decades. Using a ring technique we were able to present all of the information in a single map, which is easy for the audience to meaningfully interpret.<a href="http://www.arcgis.com/apps/PublicInformation/index.html?appid=bfdbd96a560f4aa581966f3af2c42bd4&amp;extent=-122.6215,37.4344,-121.5311,38.1085">See Full Map</a></p>
@@ -798,7 +798,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 <div><iframe width="100%" height="450px"
 src="http://www.arcgis.com/apps/SummaryViewer/index.html?appid=1ee0b7e1c6da4c7786e7a3c1ba860b2c"
 frameborder="0" scrolling="no"></iframe></div>
-							<h4>Project Overview</h4>
+							<h4>Project Overview / <a href="http://www.arcgis.com/apps/SummaryViewer/index.html?appid=1ee0b7e1c6da4c7786e7a3c1ba860b2c">See Full Map</a> / <a href="https://www.academia.edu/19586232/Oakland_Sustainable_Neighborhood_Initiative_OSNI_Interactive_Map_Moving_Beyond_Paper_Maps">See Full Report</a></h4>
 							<p>The OSNI BRT Line</p>
 							<h4>Project Details</h4>
 							<p>This interactive map was designed to examine the potential impact of the Bus Rapid Transit Line (BRT) in East Oakland, CA. It was created for The Oakland Sustainable Neighborhood Initiative (OSNI), which was convened to examine the impact of the purposed BRT line along the International Boulevard, between Lake Merritt and 109th Avenue. This resource goes beyond the typical paper maps and allows the user to interact with the information and understand the different variables, such as, land use, ownership, and crime that capture some of the on-the-ground phenomenon.
@@ -813,13 +813,13 @@ frameborder="0" scrolling="no"></iframe></div>
 							<!--<img src="images/EBTSite.png" />-->
 							<!--<br />-->
 <div><iframe width="100%" height="450px" src="http://naulston.github.io/Alameda_EBT_Map/" frameborder="0" scrolling="no"></iframe></div>
-							<h4>Project Overview</h4>
+							<h4>Project Overview / <a href="http://naulston.github.io/Alameda_EBT_Map/">See Full Map</a> / <a href="https://www.academia.edu/19591994/Electronic_Benefits_Transfer_Service_Charges_in_Alameda_County_California_A_Geographic_Analysis_of_the_Inequitable_Service_Charges">See Full Report</a></h4>
 							<p>Alameda County ATM Locator for EBT Clients</p>
 							<h4>Project Details</h4>
 							<p>Individuals and families on governmental assistance attempt to make every dollar that they are allocated stretch to freed clothes, and house their families.
 							<a href="http://calreinvest.org/system/resources/W1siZiIsIjIwMTQvMDMvMjQvMjFfNDJfMTRfODQxXzE5X01pbGxpb2 5fQVRNX0ZlZV9DUkNfUmVwb3J0Xy5wZGYiXV0/19%20Million%20ATM%20Fee%20%28CRC%20Report% 29.pdf">CRC found that $19 million in the State of California of EBT resources was used on ATM fees</a>./<p>  
 							<p>Locally, Alameda County lost $60,000 in CalWorks funds a month ($720,000 in the year) to ATM fees. These funds could have benefited the local the local business that the clients frequent and not the banking system.
-								<a href="hhttps://www.academia.edu/19591994/Electronic_Benefits_Transfer_Service_Charges_in_Alameda_County_California_A_Geographic_Analysis_of_the_Inequitable_Service_Charges">Read Full Report</a></p>
+								<a href="https://www.academia.edu/19591994/Electronic_Benefits_Transfer_Service_Charges_in_Alameda_County_California_A_Geographic_Analysis_of_the_Inequitable_Service_Charges">Read Full Report</a></p>
 							</div><!-- /span8 -->
 						</div><!-- /row-fluid -->	
 					</div><!-- /panel6 -->
@@ -887,7 +887,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
 <div><iframe width="100%" height="450px" frameborder="0" src="images/SF_Bike_Infrastructure5.jpg" align="middle" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
-              <h4>Project Overview/<a href="https://www.academia.edu/18944953">See Full DRAFT Report </a></h4>
+              <h4>Project Overview/<a href="https://www.academia.edu/18944953">See Full Report </a></h4>
               <p>Disparities in the Current San Francisco Bicycle Infrastructure</p>
               <h4>Project Details</h4>
               <p>Bicycling is an inexpensive mode of transportation, however in a biking mecca like San Francisco the question arises if the bike resources are equalitably distributed throughout the city.  <br>  Bicis Del Pueblo, a bike start-up co-operative bike shop based in the Excelsior neighborhood, views the inability to address the biking issues in District 11 and the Excelsior neighborhood as evidence they have not been committed to building transportation equity.  Bicis Del Pueblo will demonstrate, through the most current available data, how the City government has ignored the communities we serve as they allocate financial and material investments for bike infrastructure throughout the City.<br>
