--- a/index.html
+++ b/index.html
@@ -399,6 +399,13 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>Contemporary Impact of "Redlining" in Oakland</p></center></a></li>
+                </ul>
+                <!--<p>San Francisco Bicycle Infrastructure</p>-->  
+              </div><!-- /span4 -->
+
+<div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-15" class="item" data-id="id-15" data-tag="website" data-type="web"><a href="#"><img src="images/Community_Well.png" width="281px" height="191px" /><center><p>Community Well</p></center></a></li>
                 </ul>
                 <!--<p>Community Well</p>-->    
@@ -562,12 +569,17 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 <section id="writings">								
 								<center><h2>Written Pieces</h2></center>
 								<center><div class="spacer"></div></center>
-								<center><p>General Areas: Cycling Infrastructure and Safety, Waste Management, Citizen Participation, & Other Urban Planning Topics</p></center>
+								<center><p>General Areas: Geospatial Analysis, Cycling Infrastructure and Safety, Waste Management, Citizen Participation, & Other Urban Planning Topics</p></center>
 								<!--<img src="images/written.jpg" alt="" />-->
 								
                 <article>
                   <h3>Advanced Dasymetric Mapping Model: A Case Study for Park Access 2016</h3>
                   <p>An improved method of population distribution that allows geographers to increase the accuracy of population estimates for custom geographic areas, like neighborhoods, city council districts, or service areas.  <a href="https://www.academia.edu/27614103/Advanced_Dasymetric_Mapping_Model_A_Case_Study_for_Park_Access">Read Full Report</a></p>
+                </article>
+
+                <article>
+                  <h3>Present‐day Impact of the 1937 Home Owner's Loan Corporation Maps: A Case Study of the City of Oakland, California -- Did Addressing A Past Housing Crisis Give a Biased Shape to Current Patterns </h3>
+                  <p>A correlation is found between the 1937 HOLC "Redlining" Maps and current housing patterns in the City of Oakland, CA<a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns">Read Full Report</a></p>
                 </article>
 
                 <article>
@@ -686,7 +698,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 							Programs:
 							Statistics: SPSS, STATA, R, Excel, D3, SQL
-							Mapping: ArcGIS, QGIS, Google Earth, Google Maps, Leaflet, CartoDB, Mapbox, OpenStreetMap
+							Mapping: ArcGIS, QGIS, Google Earth, Google Maps, Leaflet, CartoDB, Mapbox, OpenStreetMap, Tableau
               Group facilitation:
               Data Vizualization (both paper and interactive): Maps, Charts, Graphs, and infographics
 						</p><br>
@@ -924,7 +936,6 @@ frameborder="0" scrolling="no"></iframe></div>
             </div><!-- /row-fluid --> 
           </div><!-- /panel12 -->
 
-
 <div data-panel="panel-13">
             <div class="row-fluid">
               <div class="span8 offset2 tweak">
@@ -989,6 +1000,22 @@ frameborder="0" scrolling="no"></iframe></div>
               </div><!-- /span8 -->
             </div><!-- /row-fluid --> 
           </div><!-- /panel16 -->
+
+          <div data-panel="panel-17">
+            <div class="row-fluid">
+              <div class="span8 offset2 tweak">
+              <!--<img src="images/VITASite.png" />-->
+              <!--<br />-->
+<div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/CompareAnalysis/index.html?appid=1fcbe19cbbd54049a8203e4be8b7b1ff" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+              <h4>Project Overview / <a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns"> Full Report </a></h4>
+              <p>HOLC Redlining & Present-Day Patterns</p>
+              <h4>Project Details</h4>
+              <p>A determination of the correlation between the 1937 Home Owners' Loan Corporation (HOLC) "Redlining" map and current housing and population patterns in the City of Oakland, CA. The biased policies and programs of the past continue to have an impact on modern planning issues. 
+.<a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns">See Full Report </a></p>
+              </div><!-- /span8 -->
+            </div><!-- /row-fluid --> 
+          </div><!-- /panel17 -->
+          
 					<nav>
 						<span class="bl-next-work">&gt; Next Project</span>
 						<span class="bl-icon bl-icon-close"></span>
