--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>Contemporary Impact of "Redlining" in Oakland</p></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Redlining.png" width="281px" height="191px" /><center><p>Contemporary Impact of "Redlining" in Oakland</p></center></a></li>
                 </ul>
                 <!--<p>San Francisco Bicycle Infrastructure</p>-->  
               </div><!-- /span4 -->
@@ -1006,7 +1006,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <div class="span8 offset2 tweak">
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
-<div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/CompareAnalysis/index.html?appid=1fcbe19cbbd54049a8203e4be8b7b1ff" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+<div><iframe width="100%" height="450px" frameborder="0" src="http://www.arcgis.com/apps/View/index.html?appid=fb386c307bc14bf6a83484ee2b451889" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
               <h4>Project Overview / <a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns"> Full Report </a></h4>
               <p>HOLC Redlining & Present-Day Patterns</p>
               <h4>Project Details</h4>
