--- a/index.html
+++ b/index.html
@@ -399,13 +399,6 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Redlining.png" width="281px" height="191px" /><center><p>Contemporary Impact of "Redlining" in Oakland</p></center></a></li>
-                </ul>
-                <!--<p>San Francisco Bicycle Infrastructure</p>-->  
-              </div><!-- /span4 -->
-
-<div class="span4">
-                <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-15" class="item" data-id="id-15" data-tag="website" data-type="web"><a href="#"><img src="images/Community_Well.png" width="281px" height="191px" /><center><p>Community Well</p></center></a></li>
                 </ul>
                 <!--<p>Community Well</p>-->    
@@ -413,9 +406,16 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
                 </ul>
                 <!--<p>Holder</p>-->    
+              </div><!-- /span4 -->
+
+<div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Redlining.png" width="281px" height="191px" /><center><p>Contemporary Impact of "Redlining" in Oakland</p></center></a></li>
+                </ul>
+                <!--<p>San Francisco Bicycle Infrastructure</p>-->  
               </div><!-- /span4 -->
 
 <div class="span4">
@@ -425,6 +425,19 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 <!--<p>Oakland Voting</p>-->    
               </div><!-- /span4 -->
 
+ <div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
+                </ul>
+                <!--<p>Holder</p>-->    
+              </div><!-- /span4 -->
+
+<div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
+                </ul>
+                <!--<p>Holder</p>-->    
+              </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
@@ -433,21 +446,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 <!--<p>Mosswood Park Access</p>-->    
               </div><!-- /span4 -->
 
-              <div class="span4">
-                <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
-                </ul>
-                <!--<p>Holder</p>-->    
-              </div><!-- /span4 -->
-
-              <div class="span4">
-                <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
-                </ul>
-                <!--<p>Holder</p>-->    
-              </div><!-- /span4 -->
-
-             <div class="span4">
+<div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-12" class="item" data-id="id-12" data-tag="website" data-type="map"><a href="#"><img src="images/Miley_Map.png" width="281px" height="191px" /><center><p>4th Supervisoral District</p></center></a></li>
                 </ul>
@@ -456,24 +455,24 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
+                </ul>
+                <!--<p>Holder</p>-->    
+              </div><!-- /span4 -->
+
+<div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
+                </ul>
+                <!--<p>Holder</p>-->    
+              </div><!-- /span4 -->
+
+<div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="167px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
                 </ul>
                 <!--<p>Potential Crude Oil Spill</p>-->  
-              </div><!-- /span4 -->
-
-              <div class="span4">
-                <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
-                </ul>
-                <!--<p>Holder</p>-->    
-              </div><!-- /span4 -->
-
-              <div class="span4">
-                <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
-                </ul>
-                <!--<p>Holder</p>-->    
-              </div><!-- /span4 -->          
+              </div><!-- /span4 -->       
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
@@ -481,6 +480,20 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 </ul>
                 <!--<p>San Francisco Bicycle Infrastructure</p>-->  
               </div><!-- /span4 -->
+
+<div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
+                </ul>
+                <!--<p>Holder</p>-->    
+              </div><!-- /span4 -->   
+
+<div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-17" class="item" data-id="id-17" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Hold</h4></center></a></li>
+                </ul>
+                <!--<p>Holder</p>-->    
+              </div><!-- /span4 -->   
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
