--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-16" class="item" data-id="id-16" data-tag="website" data-type="map"><a href="#"><img src="images/Collision_Story.png" width="281px" height="191px" /><center><p>A Story of Reported Bicycle Collions in San Francisco</p></center></a></li>
+                  <li data-panel="panel-16" class="item" data-id="id-16" data-tag="map" data-type="map"><a href="#"><img src="images/Collision_Story.png" width="281px" height="191px" /><center><p>Reported Bicycle Collions in San Francisco</p></center></a></li>
                 </ul>
                 <!--<p>Story of Bike Collisions</p>-->    
               </div><!-- /span4 -->
