change in order and title
could be the final

--- a/index.html
+++ b/index.html
@@ -415,14 +415,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 <ul id="bl-work-items" style="list-style: none;">
                   <li data-panel="panel-18" class="item" data-id="id-18" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Redlining.png" width="281px" height="191px" /><center><p>Contemporary Impact of "Redlining" in Oakland</p></center></a></li>
                 </ul>
-                <!--<p>San Francisco Bicycle Infrastructure</p>-->  
+                <!--<p>Contemporary Impact of "Redlining" in Oakland</p>-->  
               </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-14" class="item" data-id="id-14" data-tag="map" data-type="map"><img src="images/Oakland_Voting.png" width="281px" height="191px" /><center><p>Oakland Voting</p></center></a></li>
+                  <li data-panel="panel-14" class="item" data-id="id-14" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Voting.png" width="281px" height="191px" /><center><p>Oakland Voting Patterns</p></center></a></li>
                 </ul>
-                <!--<p>Oakland Voting</p>-->    
+                <!--<p>Oakland Voting</p>-->  
               </div><!-- /span4 -->
 
  <div class="span4">
@@ -500,6 +500,13 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                   <li data-panel="panel-16" class="item" data-id="id-16" data-tag="map" data-type="map"><a href="#"><img src="images/Collision_Story.png" width="281px" height="191px" /><center><p>Reported Bicycle Collions in San Francisco</p></center></a></li>
                 </ul>
                 <!--<p>Story of Bike Collisions</p>-->    
+              </div><!-- /span4 -->
+
+<div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-18" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
+                </ul>
+                <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
             </div><!-- /row-fluid -->
