--- a/index.html
+++ b/index.html
@@ -467,16 +467,16 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
-<div class="span4">
+  <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="167px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
+                  <li data-panel="panel-16" class="item" data-id="id-16" data-tag="map" data-type="map"><a href="#"><img src="images/Collision_Story.png" width="281px" height="191px" /><center><p>The Story of Reported Bicycle Collions in San Francisco</p></center></a></li>
                 </ul>
-                <!--<p>Potential Crude Oil Spill</p>-->  
-              </div><!-- /span4 -->       
+                <!--<p>Story of Bike Collisions</p>-->    
+              </div><!-- /span4 -->   
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-11" class="item" data-id="id-11" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>San Francisco Bicycle Infrastructure: Is it Equitably Distributed?</p></center></a></li>
+                  <li data-panel="panel-11" class="item" data-id="id-11" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>Is San Francisco's Bicycle Infrastructure Equitably Distributed?</p></center></a></li>
                 </ul>
                 <!--<p>San Francisco Bicycle Infrastructure</p>-->  
               </div><!-- /span4 -->
@@ -497,10 +497,10 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-16" class="item" data-id="id-16" data-tag="map" data-type="map"><a href="#"><img src="images/Collision_Story.png" width="281px" height="191px" /><center><p>Reported Bicycle Collions in San Francisco</p></center></a></li>
+                  <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="167px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
                 </ul>
-                <!--<p>Story of Bike Collisions</p>-->    
-              </div><!-- /span4 -->
+                <!--<p>Potential Crude Oil Spill</p>-->  
+              </div><!-- /span4 -->  
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
