--- a/index.html
+++ b/index.html
@@ -472,13 +472,20 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                   <li data-panel="panel-16" class="item" data-id="id-16" data-tag="map" data-type="map"><a href="#"><img src="images/Collision_Story.png" width="281px" height="191px" /><center><p>The Story of Reported Bicycle Collions in San Francisco</p></center></a></li>
                 </ul>
                 <!--<p>Story of Bike Collisions</p>-->    
-              </div><!-- /span4 -->   
+              </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-11" class="item" data-id="id-11" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>Is San Francisco's Bicycle Infrastructure Equitably Distributed?</p></center></a></li>
+                  <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="167px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
                 </ul>
-                <!--<p>San Francisco Bicycle Infrastructure</p>-->  
+                <!--<p>Potential Crude Oil Spill</p>-->  
+              </div><!-- /span4 -->
+
+<div class="span4">
+                <ul id="bl-work-items" style="list-style: none;">
+                  <li data-panel="panel-18" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
+                </ul>
+                <!--<p>Holder</p>-->    
               </div><!-- /span4 -->
 
 <div class="span4">
@@ -490,17 +497,10 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-18" class="item" data-id="id-18" data-tag="website" data-type="web"><img src="images/blank.png" width="281px" height="191px" /><center><h4>Holding a space for another Frame</h4></center></a></li>
+                  <li data-panel="panel-11" class="item" data-id="id-11" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>Is San Francisco's Bicycle Infrastructure Equitably Distributed?</p></center></a></li>
                 </ul>
-                <!--<p>Holder</p>-->    
-              </div><!-- /span4 -->   
-
-<div class="span4">
-                <ul id="bl-work-items" style="list-style: none;">
-                  <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="167px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
-                </ul>
-                <!--<p>Potential Crude Oil Spill</p>-->  
-              </div><!-- /span4 -->  
+                <!--<p>San Francisco Bicycle Infrastructure</p>-->  
+              </div><!-- /span4 -->
 
 <div class="span4">
                 <ul id="bl-work-items" style="list-style: none;">
@@ -589,40 +589,45 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 <section id="writings">								
 								<center><h2>Written Pieces</h2></center>
 								<center><div class="spacer"></div></center>
-								<center><p>General Areas: Geospatial Analysis, Cycling Infrastructure and Safety, Waste Management, Citizen Participation, & Other Urban Planning Topics</p></center>
+								<center><h5>General Areas: Geospatial Analysis, Cycling Infrastructure and Safety, Waste Management, Citizen Participation, & Other Urban Planning Topics</h5></center>
 								<!--<img src="images/written.jpg" alt="" />-->
 								
-                <article>
+                <ol>
+                <li><article>
                   <h3>Advanced Dasymetric Mapping Model: A Case Study for Park Access 2016</h3>
                   <p>An improved method of population distribution that allows geographers to increase the accuracy of population estimates for custom geographic areas, like neighborhoods, city council districts, or service areas.  <a href="https://www.academia.edu/27614103/Advanced_Dasymetric_Mapping_Model_A_Case_Study_for_Park_Access">Read Full Report</a></p>
-                </article>
+                </article></li>
 
-                <article>
+                <li><article>
                   <h3>Present‐day Impact of the 1937 Home Owner's Loan Corporation Maps: A Case Study of the City of Oakland, California -- Did Addressing A Past Housing Crisis Give a Biased Shape to Current Patterns </h3>
                   <p>A correlation is found between the 1937 HOLC "Redlining" Maps and current housing patterns in the City of Oakland, CA<a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns">Read Full Report</a></p>
-                </article>
+                </article></li>
 
-                <article>
+                <li><article>
                   <h3>Eliminating Bicycle Collisions: Vision Zero in the City of San Francisco 2016</h3>
                   <p>An examination of the City of San Francsico goal of eliminating traffic fatalities from a cycling perspective <a href="https://www.academia.edu/28269420/Eliminating_Bicycle_Collisions_Vision_Zero_in_the_City_of_San_Francisco">Read Full Report</a></p>
-                </article>
+                </article></li>
 
                 <article>
 									<h3>City and County of San Francisco: Profile of the Existing Bicycle Infrastructure in District 11 and the Excelsior Neighborhood 2015</h3>
 									<p>A demonstration of the inequitable distribution of cycling infrastructure in the the City of San Francisco <a href="https://www.academia.edu/s/499a82851e?source=work">Read Full Report</a></p>
 								</article>
+
                 <article>
                   <h3>Saving Business Districts:  A Formalized Parcel Savings Account  2016</h3>
                   <p>A systematic way for cities to address vacant business store front before they become problems. <a href="https://www.academia.edu/28251435/Saving_Business_Districts">Read Full Report</a></p>
                 </article>
+
                 <article>
                   <h3>The Election of Libby Schaaf and What the Most Recent Mayoral Elections Demonstrate About Elections in the United States of America 2016</h3>
                   <p>A discussion of what elections really say about the voting public and inexpensive policies that could be adopted to increase voter turnout. <a href="https://www.academia.edu/27692954/The_Election_of_Libby_Schaaf_and_What_the_Most_Recent_Mayoral_Elections_Demonstrate_About_Elections_in_the_United_States_of_America">Read Full Report</a></p>
                 </article>
+
 								<article>
 									<h3>Electronic Benefits Transfer Service Charges in Alameda County California: A Geographic Analysis of the Inequitable Service Charges 2015</h3>
 									<p>An examination of the ATM fees on EBT clients in Alameda County and the City of Oakland. We were able to develop a enhanced mapping tool that serves this population <a href="https://www.academia.edu/19591994/Electronic_Benefits_Transfer_Service_Charges_in_Alameda_County_California_A_Geographic_Analysis_of_the_Inequitable_Service_Charges">Read Full Report</a></p>
 								</article>
+
 								<article>
 									<h3>Oakland Sustainable Neighborhood Initiative Interactive Map: Moving Beyond Paper Maps 2015</h3>
 									<p>Designing map tools to enhance public user understanding of data in the planning and decision-making processes <a href="https://www.academia.edu/688425/The_Built_Environment_and_Schools">Read Full Report</a></p>
@@ -641,14 +646,17 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 									<h3>International Hazardous Waste 2010</h3>
 									<p>How trade, consumption, and disposal patterns of hazardous waste impact communities across the globe as waste is traded between nations <a href="https://www.academia.edu/688422/International_Hazardous_Waste_Trade">Read Full Report</a></p>
 								</article>
+
 								<article>
 									<h3>Using Farmer's Markets to Access Democracy 2010</h3>
 									<p>Designing Farmer's Markets as a place for communities to access their public officials in a informal setting <a href="https://www.academia.edu/898041/Using_Farmers_Markets_to_Access_Democracy">Read Full Report</a></p>
 								</article>
+
 								<article>
 									<h3>The Built Environment of Schools and Student Performance 2010</h3>
 									<p>Designing Farmer's Markets as a place for communities to access their public officials in a informal setting <a href="https://www.academia.edu/688425/The_Built_Environment_and_Schools">Read Full Report</a></p>
 								</article>
+              </ol>
 </section>
 
 
