trying to order
all the works

--- a/index.html
+++ b/index.html
@@ -608,54 +608,55 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                   <p>An examination of the City of San Francsico goal of eliminating traffic fatalities from a cycling perspective <a href="https://www.academia.edu/28269420/Eliminating_Bicycle_Collisions_Vision_Zero_in_the_City_of_San_Francisco">Read Full Report</a></p>
                 </article></li>
 
-                <article>
+                <li><article>
 									<h3>City and County of San Francisco: Profile of the Existing Bicycle Infrastructure in District 11 and the Excelsior Neighborhood 2015</h3>
 									<p>A demonstration of the inequitable distribution of cycling infrastructure in the the City of San Francisco <a href="https://www.academia.edu/s/499a82851e?source=work">Read Full Report</a></p>
-								</article>
+								</article></li>
 
-                <article>
+                <li><article>
                   <h3>Saving Business Districts:  A Formalized Parcel Savings Account  2016</h3>
                   <p>A systematic way for cities to address vacant business store front before they become problems. <a href="https://www.academia.edu/28251435/Saving_Business_Districts">Read Full Report</a></p>
-                </article>
+                </article></li>
 
-                <article>
+                <li><article>
                   <h3>The Election of Libby Schaaf and What the Most Recent Mayoral Elections Demonstrate About Elections in the United States of America 2016</h3>
                   <p>A discussion of what elections really say about the voting public and inexpensive policies that could be adopted to increase voter turnout. <a href="https://www.academia.edu/27692954/The_Election_of_Libby_Schaaf_and_What_the_Most_Recent_Mayoral_Elections_Demonstrate_About_Elections_in_the_United_States_of_America">Read Full Report</a></p>
-                </article>
+                </article></li>
 
-								<article>
+								<li><article>
 									<h3>Electronic Benefits Transfer Service Charges in Alameda County California: A Geographic Analysis of the Inequitable Service Charges 2015</h3>
 									<p>An examination of the ATM fees on EBT clients in Alameda County and the City of Oakland. We were able to develop a enhanced mapping tool that serves this population <a href="https://www.academia.edu/19591994/Electronic_Benefits_Transfer_Service_Charges_in_Alameda_County_California_A_Geographic_Analysis_of_the_Inequitable_Service_Charges">Read Full Report</a></p>
-								</article>
+								</article></li>
 
-								<article>
+								<li><article>
 									<h3>Oakland Sustainable Neighborhood Initiative Interactive Map: Moving Beyond Paper Maps 2015</h3>
 									<p>Designing map tools to enhance public user understanding of data in the planning and decision-making processes <a href="https://www.academia.edu/688425/The_Built_Environment_and_Schools">Read Full Report</a></p>
-								</article>
+								</article></li>
 
-                <article>
+                <li><article>
                   <h3>City Council District Land Use Trends: A Case Study in the City of Oakland, California 2015</h3>
-                  <p>An examination of the decision making process and how land use in city council districts should be more a more significant variable in how a representaive prioritizes policy measures <a href="https://www.academia.edu/27690686/City_Council_District_Land_Use_Trends_A_Case_Study_in_the_City_of_Oakland_California">Read Full Report</a></p>
+                  <p>An examination of the decision making process and how land use in city council districts should be more a more significant variable in how a representaive prioritizes policy measures <a href="https://www.academia.edu/27690686/City_Council_District_Land_Use_Trends_A_Case_Study_in_the_City_of_Oakland_California">Read Full Report</a></p></li>
                 </article>
 
-								<article>
+								<li><article>
 									<h3>Zero Waste at the University of California Los Angeles 2011</h3>
 									<p>An analysis of Zero Waste policies and how UCLA can be the global leader in waste management of campuses of high learning <a href="https://www.academia.edu/688426/Zero_Waste_at_UCLA">Read Full Report</a></p>
-								</article>
-								<article>
+								</article></li>
+
+								<li><article>
 									<h3>International Hazardous Waste 2010</h3>
 									<p>How trade, consumption, and disposal patterns of hazardous waste impact communities across the globe as waste is traded between nations <a href="https://www.academia.edu/688422/International_Hazardous_Waste_Trade">Read Full Report</a></p>
-								</article>
+								</article></li>
 
-								<article>
+								<li><article>
 									<h3>Using Farmer's Markets to Access Democracy 2010</h3>
 									<p>Designing Farmer's Markets as a place for communities to access their public officials in a informal setting <a href="https://www.academia.edu/898041/Using_Farmers_Markets_to_Access_Democracy">Read Full Report</a></p>
-								</article>
+								</article></li>
 
-								<article>
+								<li><article>
 									<h3>The Built Environment of Schools and Student Performance 2010</h3>
 									<p>Designing Farmer's Markets as a place for communities to access their public officials in a informal setting <a href="https://www.academia.edu/688425/The_Built_Environment_and_Schools">Read Full Report</a></p>
-								</article>
+								</article></li>
               </ol>
 </section>
 
