trying to get the format
right

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 </article></li>
 
                 <li><article>
-                  <h3>Present‐day Impact of the 1937 Home Owner's Loan Corporation Maps: A Case Study of the City of Oakland, California -- Did Addressing A Past Housing Crisis Give a Biased Shape to Current Patterns </h3>
+                  <h3>Present‐day Impact of the 1937 Home Owner's Loan Corporation Maps: A Case Study of the City of Oakland, California -- Did Addressing A Past Housing Crisis Give a Biased Shape to Current Patterns 2017</h3>
                   <p>A correlation is found between the 1937 HOLC "Redlining" Maps and current housing patterns in the City of Oakland, CA<a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns">Read Full Report</a></p>
                 </article></li>
 
