--- a/index.html
+++ b/index.html
@@ -593,15 +593,15 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 								<!--<img src="images/written.jpg" alt="" />-->
 								
                 <ol>
-                <article>
-                  <li><h3>Advanced Dasymetric Mapping Model: A Case Study for Park Access 2016</h3></li>
+                <li><article>
+                  <h3>Advanced Dasymetric Mapping Model: A Case Study for Park Access 2016</h3>
                   <p>An improved method of population distribution that allows geographers to increase the accuracy of population estimates for custom geographic areas, like neighborhoods, city council districts, or service areas.  <a href="https://www.academia.edu/27614103/Advanced_Dasymetric_Mapping_Model_A_Case_Study_for_Park_Access">Read Full Report</a></p>
-                </article>
+                </article></li>
 
-                <article>
-                  <li><h3>Present‐day Impact of the 1937 Home Owner's Loan Corporation Maps: A Case Study of the City of Oakland, California -- Did Addressing A Past Housing Crisis Give a Biased Shape to Current Patterns 2017</h3></li>
+                <li><article>
+                  <h3>Present‐day Impact of the 1937 Home Owner's Loan Corporation Maps: A Case Study of the City of Oakland, California -- Did Addressing A Past Housing Crisis Give a Biased Shape to Current Patterns 2017</h3>
                   <p>A correlation is found between the 1937 HOLC "Redlining" Maps and current housing patterns in the City of Oakland, CA<a href="https://www.academia.edu/30834688/Present_day_Impact_of_the_1937_Home_Owners_Loan_Corporation_Maps_A_Case_Study_of_the_City_of_Oakland_California_--_Did_Addressing_A_Past_Housing_Crisis_Give_a_Biased_Shape_to_Current_Patterns">Read Full Report</a></p>
-                </article>
+                </article></li>
 
                 <li><article>
                   <h3>Eliminating Bicycle Collisions: Vision Zero in the City of San Francisco 2016</h3>
