--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 </header>
 
             <div class="left">
-            <center><h4>Mapping Projects</h4>
-            <img src="images/Torino.jpg" alt="image" height="70" style="margin-BOTTOM: 45px;"/></center>
+            <center>
+            <img src="images/Torino.jpg" alt="image" height="90" style="margin-BOTTOM: 9px;margin-top: 15px;"/><h6>Mapping Projects</h6></center>
             </div>
 
             <div class="right">
-            <center><h4>Website Design Projects</h4>
-            <img src="images/webdesign.jpg" alt="image" height="70px" style="margin-BOTTOM: 45px;"/></center>
+            <center>
+            <img src="images/webdesign.jpg" alt="image" height="90px" style="margin-BOTTOM: 9px;margin-top: 15px;"/><h6>Website Design Projects</h6></center>
             </div>
       
 
