--- a/index.html
+++ b/index.html
@@ -610,11 +610,11 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
                 <li><article>
 									<h3>City and County of San Francisco: Profile of the Existing Bicycle Infrastructure in District 11 and the Excelsior Neighborhood 2015</h3>
-									<p>A demonstration of the inequitable distribution of cycling infrastructure in the the City of San Francisco <a href="https://www.academia.edu/s/499a82851e?source=work">Read Full Report</a></p>
+									<p>A demonstration of the inequitable distribution of cycling infrastructure in the the City of San Francisco <a href="https://www.academia.edu/18944953/City_and_County_of_San_Francisco_Profile_of_the_Existing_Bicycle_Infrastructure_in_District_11_and_the_Excelsior_Neighborhood">Read Full Report</a></p>
 								</article></li>
 
                 <li><article>
-                  <h3>Saving Business Districts:  A Formalized Parcel Savings Account  2016</h3>
+                  <h3>Saving Business Districts: A Formalized Parcel Savings Account 2016</h3>
                   <p>A systematic way for cities to address vacant business store front before they become problems. <a href="https://www.academia.edu/28251435/Saving_Business_Districts">Read Full Report</a></p>
                 </article></li>
 
@@ -670,7 +670,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 			<!--=========== Skills & Improvables SECTION ===========-->
 				<section>
 					<div class="bl-box">
-						<h2>SKILLS <br />
+						<h2>TECHNICAL SKILLS <br />
 							+ <br />
 							IMPROVABLES</h2>
 					</div>
@@ -679,7 +679,7 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 					<div class="row-fluid">
 					<div class="span12">
 
-								<center><h2>Skills <br> + <br>Improvables</h2></center>
+								<center><h2>Technical Skills <br> + <br>Improvables</h2></center>
 								<div class="spacer"></div>
 								<br />
 								<center><p>I believe we all have the ability to acquire skills through trainings.</p></center>
